--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,10 +21,22 @@ set(CMAKE_C_FLAGS_RELEASE "-O2 -DNDEBUG")
 
 # Wskazujemy pliki źródłowe.
 set(SOURCE_FILES
+    src/string_utils.h
+    src/string_utils.c
+    src/phone_numbers.h
+    src/phone_numbers.c
+    src/node_utils.h
+    src/node_utils.c
     src/phone_forward.h
     src/phone_forward.c
     src/phone_forward_example.c)
 set(SOURCE_FILES_TEST
+    src/string_utils.h
+    src/string_utils.c
+    src/phone_numbers.h
+    src/phone_numbers.c
+    src/node_utils.h
+    src/node_utils.c
     src/phone_forward.h
     src/phone_forward.c
     src/phone_forward_tests.c)
