--- a/Doxyfile.in
+++ b/Doxyfile.in
@@ -898,7 +898,7 @@ RECURSIVE              = YES
 # Note that relative paths are relative to the directory from which doxygen is
 # run.
 
-EXCLUDE                = ../src/phone_forward_example.c ../src/phone_forward_tests.c
+EXCLUDE                = ../src/phone_forward_example.c
 
 # The EXCLUDE_SYMLINKS tag can be used to select whether or not files or
 # directories that are symbolic links (a Unix file system feature) are excluded
